[tool.poetry]
name = "rt-amp-alayze"
version = "0.1.0"
description = ""
authors = ["Reznik Vladislav <reznik.vs@iapran.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.22.0"
scipy = "^1.13.1"
pandas = "^2.2.2"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120